[package]
name = "backtracer"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>",
           "Alex Crichton <alex@alexcrichton.com>",
           "The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/gz/backtracer"
homepage = "https://github.com/gz/backtracer"
documentation = "https://docs.rs/backtracer"

description = """
A library to acquire a stack trace (backtrace) at runtime in a no-std Rust program.
"""

[dependencies]
cfg-if = "0.1"
rustc-demangle = "0.1.4"
x86 = { path = "../x86" }

# object = { version = "0.9.0", default-features = false  }

#[dependencies.gimli]
#git = "https://github.com/gz/gimli.git"
#version = "0.16.0"
#default-features = false
#features = ["alloc"]
