[package]
name = "backtracer_core"
version = "0.0.5"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>",
           "Alex Crichton <alex@alexcrichton.com>",
           "The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/gz/backtracer"
homepage = "https://github.com/gz/backtracer"
documentation = "https://docs.rs/backtracer"

description = """
A library to acquire a stack trace (backtrace) at runtime in a no-std Rust program.
"""

[dependencies]
cfg-if = "0.1"
x86 = "0.47"
log = "0.4"
stable_deref_trait = { version = "1.1.0", default-features = false, features = ["alloc"] }
gimli = { version = "0.25", default-features = false, features = ["read", "endian-reader", "stable_deref_trait"] }
addr2line = { version = "0.16", default-features = false, features = ["rustc-demangle"] }
